 [project]
 name = "calendar_meeting_scheduler_env"
 version = "0.1.0"
 description = "OpenEnv environment: multi-user calendar + meeting scheduling."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "fastapi>=0.110",
   "pydantic>=2.6",
  "requests>=2.31",
  "tzdata>=2024.1",
   "uvicorn[standard]>=0.27",
 ]
 
 [project.scripts]
 server = "app.main:run"
 baseline = "app.baseline:main"
 
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
